--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
           distribution: 'temurin'
           java-version: 19
       - run: ./gradlew package
-      - run: mkdir staging && cp app/build/installer/* staging
+      - run: mkdir staging && cp build/installer/* staging
       - name: upload build result
         uses: actions/upload-artifact@v2
         with:
