--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,12 +5,12 @@ jobs:
   build-app:
     strategy:
       matrix:
-        os: [ macos-latest,ubuntu-20.04, windows-latest ]
+        os: [ macos-latest,ubuntu-latest, windows-latest ]
     name: Build the application
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
@@ -19,7 +19,7 @@ jobs:
       - run: ./gradlew package
       - run: mkdir staging && cp build/installer/* staging
       - name: upload build result
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: IRacing-Telemetry-${{matrix.os}}
           path: staging
